config-root/namespaces/jx-staging/node-http-app/node-http-app-node-http-app-deploy.yaml
# Source: node-http-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-http-app-node-http-app
  labels:
    draft: draft-app
    chart: "node-http-app-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'node-http-app'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: node-http-app-node-http-app
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: node-http-app-node-http-app
    spec:
      serviceAccountName: node-http-app-node-http-app
      containers:
        - name: node-http-app
          image: "10.96.86.73/kimdoubleb/node-http-app:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
