config-root/namespaces/jx-staging/node-http-app/node-http-app-svc.yaml
# Source: node-http-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-http-app
  labels:
    chart: "node-http-app-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'node-http-app'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: node-http-app-node-http-app
